--- a/style.css
+++ b/style.css
@@ -5,18 +5,29 @@ h1 {
 
 form {
   text-align: center;
+  margin-top: 2rem;
 }
 
 #submitButton {
   font-size: 23px;
 }
 
-th, td {
-  border: solid black 1px;
-  text-align: center;
-  padding: 10px;
+table {
+  width: 100%; 
+  border-collapse: collapse; 
 }
 
-.tableFormat table {
-  margin: 0 auto;
+th, td {
+  text-align: center;
+  border: 1px solid #ddd;  
+  padding: 8px;
+}
+
+th {
+  text-align: center;
+  background-color: #f2f2f2; 
+}
+
+.tableFormat {
+  overflow-x: auto; 
 }
